modules/regex_syntactic_sim/PCREParser.py
# Generated from PCRE.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class PCREParser ( Parser ):

    grammarFileName = "PCRE.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'\\'", "'$'", "'.'", "'['", "'^'", "'|'", 
                     "'?'", "'*'", "'+'", "'{'", "'}'", "'('", "')'", "']'", 
                     "'[:'", "':]'", "','", "'-'", "'_'", "'='", "'&'", 
                     "'<'", "'>'", "'''", "':'", "'#'", "'!'", "'A'", "'B'", 
                     "'C'", "'D'", "'E'", "'F'", "'G'", "'H'", "'I'", "'J'", 
                     "'K'", "'L'", "'M'", "'N'", "'O'", "'P'", "'Q'", "'R'", 
                     "'S'", "'T'", "'U'", "'V'", "'W'", "'X'", "'Y'", "'Z'", 
                     "'a'", "'b'", "'c'", "'d'", "'e'", "'f'", "'g'", "'h'", 
                     "'i'", "'j'", "'k'", "'l'", "'m'", "'n'", "'o'", "'p'", 
                     "'q'", "'r'", "'s'", "'t'", "'u'", "'v'", "'w'", "'x'", 
                     "'y'", "'z'", "'0'", "'1'", "'2'", "'3'", "'4'", "'5'", 
                     "'6'", "'7'", "'8'", "'9'" ]

    symbolicNames = [ "<INVALID>", "BSlash", "Dollar", "Dot", "OBrack", 
                      "Caret", "Pipe", "QMark", "Star", "Plus", "OBrace", 
                      "CBrace", "OPar", "CPar", "CBrack", "OPosixBrack", 
                      "CPosixBrack", "Comma", "Dash", "UScore", "Eq", "Amp", 
                      "Lt", "Gt", "Quote", "Col", "Hash", "Excl", "Au", 
                      "Bu", "Cu", "Du", "Eu", "Fu", "Gu", "Hu", "Iu", "Ju", 
                      "Ku", "Lu", "Mu", "Nu", "Ou", "Pu", "Qu", "Ru", "Su", 
                      "Tu", "Uu", "Vu", "Wu", "Xu", "Yu", "Zu", "Al", "Bl", 
                      "Cl", "Dl", "El", "Fl", "Gl", "Hl", "Il", "Jl", "Kl", 
                      "Ll", "Ml", "Nl", "Ol", "Pl", "Ql", "Rl", "Sl", "Tl", 
                      "Ul", "Vl", "Wl", "Xl", "Yl", "Zl", "D0", "D1", "D2", 
                      "D3", "D4", "D5", "D6", "D7", "D8", "D9", "OTHER" ]

    RULE_pcre = 0
    RULE_alternation = 1
    RULE_expr = 2
    RULE_element = 3
    RULE_atom = 4
    RULE_capture = 5
    RULE_atomic_group = 6
    RULE_lookaround = 7
    RULE_backreference = 8
    RULE_subroutine_reference = 9
    RULE_conditional_pattern = 10
    RULE_comment = 11
    RULE_quantifier = 12
    RULE_option_setting = 13
    RULE_option_setting_flag = 14
    RULE_backtracking_control = 15
    RULE_callout = 16
    RULE_newline_conventions = 17
    RULE_character = 18
    RULE_character_type = 19
    RULE_character_class = 20
    RULE_character_class_atom = 21
    RULE_character_class_range = 22
    RULE_character_class_range_atom = 23
    RULE_posix_character_class = 24
    RULE_anchor = 25
    RULE_match_point_reset = 26
    RULE_quoting = 27
    RULE_digits = 28
    RULE_digit = 29
    RULE_hex = 30
    RULE_letters = 31
    RULE_letter = 32
    RULE_name = 33
    RULE_other = 34
    RULE_utf = 35
    RULE_ucp = 36
    RULE_no_auto_possess = 37
    RULE_no_start_opt = 38
    RULE_cr = 39
    RULE_lf = 40
    RULE_crlf = 41
    RULE_anycrlf = 42
    RULE_any = 43
    RULE_limit_match = 44
    RULE_limit_recursion = 45
    RULE_bsr_anycrlf = 46
    RULE_bsr_unicode = 47
    RULE_accept_ = 48
    RULE_fail = 49
    RULE_mark = 50
    RULE_commit = 51
    RULE_prune = 52
    RULE_skip = 53
    RULE_then = 54

    ruleNames =  [ "pcre", "alternation", "expr", "element", "atom", "capture", 
                   "atomic_group", "lookaround", "backreference", "subroutine_reference", 
                   "conditional_pattern", "comment", "quantifier", "option_setting", 
                   "option_setting_flag", "backtracking_control", "callout", 
                   "newline_conventions", "character", "character_type", 
                   "character_class", "character_class_atom", "character_class_range", 
                   "character_class_range_atom", "posix_character_class", 
                   "anchor", "match_point_reset", "quoting", "digits", "digit", 
                   "hex", "letters", "letter", "name", "other", "utf", "ucp", 
                   "no_auto_possess", "no_start_opt", "cr", "lf", "crlf", 
                   "anycrlf", "any", "limit_match", "limit_recursion", "bsr_anycrlf", 
                   "bsr_unicode", "accept_", "fail", "mark", "commit", "prune", 
                   "skip", "then" ]

    EOF = Token.EOF
    BSlash=1
    Dollar=2
    Dot=3
    OBrack=4
    Caret=5
    Pipe=6
    QMark=7
    Star=8
    Plus=9
    OBrace=10
    CBrace=11
    OPar=12
    CPar=13
    CBrack=14
    OPosixBrack=15
    CPosixBrack=16
    Comma=17
    Dash=18
    UScore=19
    Eq=20
    Amp=21
    Lt=22
    Gt=23
    Quote=24
    Col=25
    Hash=26
    Excl=27
    Au=28
    Bu=29
    Cu=30
    Du=31
    Eu=32
    Fu=33
    Gu=34
    Hu=35
    Iu=36
    Ju=37
    Ku=38
    Lu=39
    Mu=40
    Nu=41
    Ou=42
    Pu=43
    Qu=44
    Ru=45
    Su=46
    Tu=47
    Uu=48
    Vu=49
    Wu=50
    Xu=51
    Yu=52
    Zu=53
    Al=54
    Bl=55
    Cl=56
    Dl=57
    El=58
    Fl=59
    Gl=60
    Hl=61
    Il=62
    Jl=63
    Kl=64
    Ll=65
    Ml=66
    Nl=67
    Ol=68
    Pl=69
    Ql=70
    Rl=71
    Sl=72
    Tl=73
    Ul=74
    Vl=75
    Wl=76
    Xl=77
    Yl=78
    Zl=79
    D0=80
    D1=81
    D2=82
    D3=83
    D4=84
    D5=85
    D6=86
    D7=87
    D8=88
    D9=89
    OTHER=90

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class PcreContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(PCREParser.EOF, 0)

        def alternation(self):
            return self.getTypedRuleContext(PCREParser.AlternationContext,0)


        def getRuleIndex(self):
            return PCREParser.RULE_pcre

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPcre" ):
                listener.enterPcre(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPcre" ):
                listener.exitPcre(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPcre" ):
                return visitor.visitPcre(self)
            else:
                return visitor.visitChildren(self)




    def pcre(self):

        localctx = PCREParser.PcreContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_pcre)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & -75714) != 0) or ((((_la - 64)) & ~0x3f) == 0 and ((1 << (_la - 64)) & 134217727) != 0):
                self.state = 110
                self.alternation()


            self.state = 113
            self.match(PCREParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AlternationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PCREParser.ExprContext)
            else:
                return self.getTypedRuleContext(PCREParser.ExprContext,i)


        def Pipe(self, i:int=None):
            if i is None:
                return self.getTokens(PCREParser.Pipe)
            else:
                return self.getToken(PCREParser.Pipe, i)

        def getRuleIndex(self):
            return PCREParser.RULE_alternation

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAlternation" ):
                listener.enterAlternation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAlternation" ):
                listener.exitAlternation(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAlternation" ):
                return visitor.visitAlternation(self)
            else:
                return visitor.visitChildren(self)




    def alternation(self):

        localctx = PCREParser.AlternationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_alternation)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.expr()
            self.state = 122
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==6:
                self.state = 116
                self.match(PCREParser.Pipe)
                self.state = 118
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & -75714) != 0) or ((((_la - 64)) & ~0x3f) == 0 and ((1 << (_la - 64)) & 134217727) != 0):
                    self.state = 117
                    self.expr()


                self.state = 124
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def element(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PCREParser.ElementContext)
            else:
                return self.getTypedRuleContext(PCREParser.ElementContext,i)


        def getRuleIndex(self):
            return PCREParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)




    def expr(self):

        localctx = PCREParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_expr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 125
                self.element()
                self.state = 128 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & -75714) != 0) or ((((_la - 64)) & ~0x3f) == 0 and ((1 << (_la - 64)) & 134217727) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def atom(self):
            return self.getTypedRuleContext(PCREParser.AtomContext,0)


        def quantifier(self):
            return self.getTypedRuleContext(PCREParser.QuantifierContext,0)


        def getRuleIndex(self):
            return PCREParser.RULE_element

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElement" ):
                listener.enterElement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElement" ):
                listener.exitElement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElement" ):
                return visitor.visitElement(self)
            else:
                return visitor.visitChildren(self)




    def element(self):

        localctx = PCREParser.ElementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_element)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.atom()
            self.state = 132
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 1920) != 0):
                self.state = 131
                self.quantifier()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AtomContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def option_setting(self):
            return self.getTypedRuleContext(PCREParser.Option_settingContext,0)


        def backtracking_control(self):
            return self.getTypedRuleContext(PCREParser.Backtracking_controlContext,0)


        def callout(self):
            return self.getTypedRuleContext(PCREParser.CalloutContext,0)


        def capture(self):
            return self.getTypedRuleContext(PCREParser.CaptureContext,0)


        def atomic_group(self):
            return self.getTypedRuleContext(PCREParser.Atomic_groupContext,0)


        def lookaround(self):
            return self.getTypedRuleContext(PCREParser.LookaroundContext,0)


        def backreference(self):
            return self.getTypedRuleContext(PCREParser.BackreferenceContext,0)


        def subroutine_reference(self):
            return self.getTypedRuleContext(PCREParser.Subroutine_referenceContext,0)


        def conditional_pattern(self):
            return self.getTypedRuleContext(PCREParser.Conditional_patternContext,0)


        def comment(self):
            return self.getTypedRuleContext(PCREParser.CommentContext,0)


        def character(self):
            return self.getTypedRuleContext(PCREParser.CharacterContext,0)


        def character_type(self):
            return self.getTypedRuleContext(PCREParser.Character_typeContext,0)


        def character_class(self):
            return self.getTypedRuleContext(PCREParser.Character_classContext,0)


        def posix_character_class(self):
            return self.getTypedRuleContext(PCREParser.Posix_character_classContext,0)


        def letter(self):
            return self.getTypedRuleContext(PCREParser.LetterContext,0)


        def digit(self):
            return self.getTypedRuleContext(PCREParser.DigitContext,0)


        def anchor(self):
            return self.getTypedRuleContext(PCREParser.AnchorContext,0)


        def match_point_reset(self):
            return self.getTypedRuleContext(PCREParser.Match_point_resetContext,0)


        def quoting(self):
            return self.getTypedRuleContext(PCREParser.QuotingContext,0)


        def other(self):
            return self.getTypedRuleContext(PCREParser.OtherContext,0)


        def getRuleIndex(self):
            return PCREParser.RULE_atom

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtom" ):
                listener.enterAtom(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtom" ):
                listener.exitAtom(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAtom" ):
                return visitor.visitAtom(self)
            else:
                return visitor.visitChildren(self)




    def atom(self):

        localctx = PCREParser.AtomContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_atom)
        try:
            self.state = 154
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 134
                self.option_setting()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 135
                self.backtracking_control()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 136
                self.callout()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 137
                self.capture()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 138
                self.atomic_group()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 139
                self.lookaround()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 140
                self.backreference()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 141
                self.subroutine_reference()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 142
                self.conditional_pattern()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 143
                self.comment()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 144
                self.character()
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 145
                self.character_type()
                pass

            elif la_ == 13:
                self.enterOuterAlt(localctx, 13)
                self.state = 146
                self.character_class()
                pass

            elif la_ == 14:
                self.enterOuterAlt(localctx, 14)
                self.state = 147
                self.posix_character_class()
                pass

            elif la_ == 15:
                self.enterOuterAlt(localctx, 15)
                self.state = 148
                self.letter()
                pass

            elif la_ == 16:
                self.enterOuterAlt(localctx, 16)
                self.state = 149
                self.digit()
                pass

            elif la_ == 17:
                self.enterOuterAlt(localctx, 17)
                self.state = 150
                self.anchor()
                pass

            elif la_ == 18:
                self.enterOuterAlt(localctx, 18)
                self.state = 151
                self.match_point_reset()
                pass

            elif la_ == 19:
                self.enterOuterAlt(localctx, 19)
                self.state = 152
                self.quoting()
                pass

            elif la_ == 20:
                self.enterOuterAlt(localctx, 20)
                self.state = 153
                self.other()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CaptureContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OPar(self):
            return self.getToken(PCREParser.OPar, 0)

        def CPar(self):
            return self.getToken(PCREParser.CPar, 0)

        def alternation(self):
            return self.getTypedRuleContext(PCREParser.AlternationContext,0)


        def QMark(self):
            return self.getToken(PCREParser.QMark, 0)

        def Lt(self):
            return self.getToken(PCREParser.Lt, 0)

        def name(self):
            return self.getTypedRuleContext(PCREParser.NameContext,0)


        def Gt(self):
            return self.getToken(PCREParser.Gt, 0)

        def Quote(self, i:int=None):
            if i is None:
                return self.getTokens(PCREParser.Quote)
            else:
                return self.getToken(PCREParser.Quote, i)

        def Pu(self):
            return self.getToken(PCREParser.Pu, 0)

        def Col(self):
            return self.getToken(PCREParser.Col, 0)

        def Pipe(self):
            return self.getToken(PCREParser.Pipe, 0)
